# normads

./: .gitignore  CMakeLists.txt
include/: normfn.h
include/scale/sequential/deque/: sdeque.h
include/scale/sequential/queue/: squeue.h
include/scale/sequential/stack/: sstack.h
include/sequential/deque/: deque.h
include/sequential/queue/: quegnorm.h  queue.h
include/sequential/stack/: gnormstk.h  stack.h  stkgnorm.h
source/: CMakeLists.txt
source/scale/sequential/deque/: sdeque.c
source/scale/sequential/queue/: squeue.c
source/scale/sequential/stack/: sstack.c
source/sequential/deque/: deque.c
source/sequential/queue/: quegnorm.c  queue.c
source/sequential/stack/: gnormstk.c  stack.c  stkgnorm.c
test/: CMakeLists.txt
test/scale/helper/: helper.c  helper.h
test/scale/sequential/: CMakeLists.txt  main.c  unit.h
test/scale/sequential/queue/: scale_queue_unit.c
test/scale/sequential/stack/: scale_stack_unit.c
